<resources>
    <string name="fb_msg_loading">Loading…</string>
    <string name="zm_lbl_copy_to_clipboard">Copy to Clipboard</string>
    <string name="zm_lbl_pull_down_refresh_list_release_to_refresh">Release to refresh</string>
    <string name="zm_lbl_pull_down_refresh_list_pull_down_to_refresh">Pull down to refresh</string>
    <string name="zm_lbl_pull_down_refresh_list_loading">Loading…</string>
    <string name="zm_date_time_set">Set</string>
    <string name="zm_date_time_cancel">Cancel</string>
    <string name="zm_time_picker_dialog_title">Set time</string>
    <string name="zm_msg_loading">Loading…</string>
    <string name="zm_btn_back">Back</string>
    <string name="zm_btn_exit">Exit</string>
    <string name="zm_btn_close">Close</string>
    <string name="zm_btn_select">Select</string>
    <string name="zm_btn_ok">OK</string>
    <string name="zm_btn_cancel">Cancel</string>
    <string name="zm_btn_continue">Continue</string>
    <string name="zm_btn_retry">Retry</string>
    <string name="zm_lbl_internal_storage">Device storage</string>
    <string name="zm_alert_no_sdcard">No media card</string>
    <string name="zm_lbl_sdcard">Media card %s</string>
    <string name="zm_lbl_usb_storage">USB storage %s</string>
    <string name="zm_lbl_external_storage">Media card</string>
    <plurals name="zm_lbl_folder_items">
        <item quantity="one">1 Item</item>
        <item quantity="other">%d Items</item>
    </plurals>
    <string name="zm_file_size_gb">%s GB</string>
    <string name="zm_file_size_mb">%s MB</string>
    <string name="zm_file_size_kb">%s KB</string>
    <string name="zm_file_size_bytes">%s B</string>
    <string name="zm_select_a_image">Select an Image</string>
    <string name="zm_login_to_start_conf">Sign In</string>
    <string name="zm_login_with_facebook">Facebook</string>
    <string name="zm_login_with_google">Google</string>
    <string name="zm_login_with_sso">SSO</string>
    <string name="zm_login_step_connecting">Connecting…</string>
    <string name="zm_login_step_authenticating">Getting buddy list…</string>
    <string name="zm_login_step_negotiating">Negotiating…</string>
    <string name="zm_connecting_facebook">Connecting…</string>
    <string name="zm_mi_start_conf">Meet Now</string>
    <string name="zm_mi_return_to_conf">Back to Meeting</string>
    <string name="zm_mi_invite_to_conf">Invite to Meeting</string>
    <string name="zm_mi_remove_buddy">Remove…</string>
    <string name="zm_mi_invite_again">Invite again</string>
    <string name="zm_mi_mute">Mute</string>
    <string name="zm_mi_unmute">Unmute</string>
    <string name="zm_mi_make_host">Make Host</string>
    <string name="zm_mi_assign_cohost">Make Co-host</string>
    <string name="zm_mi_withdraw_cohost">Withdraw Co-Host Permission</string>
    <string name="zm_mi_expel">Remove</string>
    <string name="zm_mi_chat">Chat</string>
    <string name="zm_mi_spotlight_video">Spotlight Video</string>
    <string name="zm_mi_unspotlight_video">Cancel Spotlight Video</string>
    <string name="zm_mi_allow_record">Allow Record</string>
    <string name="zm_mi_disallow_record">Forbid Record</string>
    <string name="zm_mi_create_new_contact">Create Phone Contact</string>
    <string name="zm_mi_add_to_existing_contact">Add to Existing Phone Contact</string>
    <string name="zm_mi_switch_camera">Switch Camera</string>
    <string name="zm_mi_enter_silent_mode">Start attendee on hold</string>
    <string name="zm_mi_leave_silent_mode">Stop attendee on hold</string>
    <string name="zm_mi_lock_meeting">Lock Meeting</string>
    <string name="zm_mi_unlock_meeting">Unlock Meeting</string>
    <string name="zm_mi_lock_share">Lock Share</string>
    <string name="zm_mi_unlock_share">Unlock Share</string>
    <string name="zm_mi_allow_panelist_video">Allow Panelist Start Video</string>
    <string name="zm_mi_allow_attendee_raisehand">Allow Attendee To Raise Hand</string>
    <string name="zm_mi_mute_on_entry">Mute Upon Entry</string>
    <string name="zm_mi_play_enter_exit_chime">Play Enter/Exit Chime</string>
    <string name="zm_mi_put_on_hold_on_entry">Put On Hold Upon Entry</string>
    <string name="zm_mi_disconnect_audio">Disconnect Audio</string>
    <string name="zm_mi_speaker_phone">Speaker On</string>
    <string name="zm_mi_bluetooth">Bluetooth</string>
    <string name="zm_mi_ear_phone">Speaker Off</string>
    <string name="zm_mi_wired_headset">Wired Headset</string>
    <string name="zm_mi_video_stop">Stop Video</string>
    <string name="zm_mi_video_ask_to_start">Ask to Start Video</string>
    <string name="zm_lbl_input_meeting_link">OR, JOIN BY MEETING LINK</string>
    <string name="zm_lbl_meeting_number_discription">Meeting ID is a 9 or 10 digit number</string>
    <string name="zm_lbl_name_instructions">Please enter your name</string>
    <string name="zm_lbl_password_instructions">Please enter your meeting password</string>
    <string name="zm_lbl_name_password_instructions">Please enter your name and the meeting password</string>
    <string name="zm_lbl_incorrect_meeting_password">Incorrect meeting password, please try again</string>
    <string name="zm_lbl_everyone">Chat with All</string>
    <string name="zm_lbl_role_me">(me)</string>
    <string name="zm_lbl_role_host">(host)</string>
    <string name="zm_lbl_role_me_host">(me, host)</string>
    <string name="zm_lbl_role_cohost">(co-host)</string>
    <string name="zm_lbl_role_me_cohost">(me, co-host)</string>
    <string name="zm_lbl_role_in_silent_mode">(On Hold)</string>
    <string name="zm_lbl_version">Version</string>
    <string name="zm_lbl_alert_me_for_im_message">Message Notifications</string>
    <string name="zm_lbl_alert_sound">Alert Sound</string>
    <string name="zm_lbl_alert_vibrate">Vibrate</string>
    <string name="zm_lbl_alert_option_desc">Specify your preference to be notified by Sound or Vibration when a new message arrives.</string>
    <string name="zm_lbl_meeting_host_colon">Host:</string>
    <string name="zm_lbl_meeting_id">Meeting ID:</string>
    <string name="zm_lbl_meeting_id2">Meeting ID</string>
    <string name="zm_lbl_topic_colon">Topic: %s</string>
    <string name="zm_lbl_duration">Duration</string>
    <string name="zm_lbl_date">Date:</string>
    <string name="zm_lbl_time">Time:</string>
    <string name="zm_lbl_time_recurring">This is a recurring meeting</string>
    <string name="zm_lbl_invite_buddy_fb">Invite Facebook Contacts</string>
    <string name="zm_lbl_invite_buddy_google">Invite Google IM Contacts</string>
    <string name="zm_lbl_copy_url">Copy URL</string>
    <string name="zm_lbl_delete">Delete</string>
    <string name="zm_lbl_buddy_invited">Invited</string>
    <string name="zm_lbl_buddy_invite_email">To invite people to Google IM, type their email addresses below:</string>
    <string name="zm_lbl_buddy_invite_invitation_msg">wants to chat with you</string>
    <string name="zm_lbl_topic">Topic</string>
    <string name="zm_lbl_topic_default">My Meeting</string>
    <string name="zm_lbl_password_schedule">Meeting Password(optional)</string>
    <string name="zm_lbl_domains_schedule">Specified Domains</string>
    <string name="zm_lbl_password">Password</string>
    <string name="zm_lbl_when">When</string>
    <string name="zm_lbl_date_on_schedle">Date</string>
    <string name="zm_lbl_from">From</string>
    <string name="zm_lbl_to">To</string>
    <string name="zm_lbl_repeat">Repeat</string>
    <string name="zm_lbl_end_repeat">End Repeat</string>
    <string name="zm_lbl_repeat_never">Never</string>
    <string name="zm_lbl_repeat_daily">Daily</string>
    <string name="zm_lbl_repeat_weekly">Weekly</string>
    <string name="zm_lbl_repeat_biweekly">Biweekly</string>
    <string name="zm_lbl_repeat_monthly">Monthly</string>
    <string name="zm_lbl_repeat_yearly">Yearly</string>
    <string name="zm_lbl_repeat_never_in_list">None</string>
    <string name="zm_lbl_repeat_daily_in_list">Every Day</string>
    <string name="zm_lbl_repeat_weekly_in_list">Every Week</string>
    <string name="zm_lbl_repeat_biweekly_in_list">Every 2 Weeks</string>
    <string name="zm_lbl_repeat_monthly_in_list">Every Month</string>
    <string name="zm_lbl_repeat_yearly_in_list">Every Year</string>
    <string name="zm_lbl_end_repeat_never">Never</string>
    <string name="zm_lbl_meeting_type">Meeting Type</string>
    <string name="zm_lbl_meeting_type_video_meeting">Video Meeting</string>
    <string name="zm_lbl_meeting_type_web_meeting">Screen Share Meeting</string>
    <string name="zm_lbl_schedule_for">Schedule For</string>
    <string name="zm_lbl_schedule_for_myself">Myself</string>
    <string name="zm_lbl_enable_address_book">Phone Contacts Matching</string>
    <string name="zm_lbl_enable_driving_mode">Driving Mode</string>
    <string name="zm_lbl_enable_driving_mode_instructions">Driving Mode turns on speaker, stops video and mutes microphone</string>
    <string name="zm_lbl_auto_connect_voip">Auto Connect Device Audio</string>
    <string name="zm_lbl_auto_connect_voip_instructions">Automatically connect audio using internet when joining a meeting</string>
    <string name="zm_lbl_auto_mute_mic_on_join_meeting">Always Mute My Microphone</string>
    <string name="zm_lbl_auto_mute_mic_on_join_meeting_instructions">Always mute my microphone when joining a meeting</string>
    <string name="zm_lbl_not_open_camera_on_join_meeting">Always Turn Off My Video</string>
    <string name="zm_lbl_not_open_camera_on_join_meeting_instructions">Always turn off my video when joining a meeting</string>
    <string name="zm_lbl_enable_kubi_robot_device">Enable Kubi Robot Device</string>
    <string name="zm_lbl_enable_kubi_robot_device_instructions">Automatically connect Kubi robot device when joining a meeting. (This allows for remote control of your Kubi robot in Zoom meetings when far-end camera control is enabled.)</string>
    <string name="zm_lbl_speaker">Speaker</string>
    <string name="zm_lbl_set_name_instructions">Please enter your name</string>
    <string name="zm_lbl_zoom_account">Email</string>
    <string name="zm_btn_done">Done</string>
    <string name="zm_btn_send">Send</string>
    <string name="zm_btn_search">Search</string>
    <string name="zm_btn_configure_account">Configure Account</string>
    <string name="zm_btn_spotlight">Spotlight</string>
    <string name="zm_btn_highlight">Highlighter</string>
    <string name="zm_btn_pen">Pen</string>
    <string name="zm_btn_erase_all">Erase All</string>
    <string name="zm_btn_color">Color</string>
    <string name="zm_hint_search">Search</string>
    <string name="zm_hint_email">Email</string>
    <string name="zm_title_login">Sign In</string>
    <string name="zm_title_forgetpwd">Forgot Password</string>
    <string name="zm_title_add_favorite">Add Company Contacts</string>
    <string name="zm_title_join_public_group">Join Public Group</string>
    <string name="zm_msg_load_domain_users_failed">Failed to load contacts in your organization.</string>
    <string name="zm_msg_indication_forgetpwd">To reset your password, please enter your email address. You may need to check your spam folder.</string>
    <string name="zm_msg_waiting_search_domain_user">Please wait…</string>
    <string name="zm_msg_select_buddies_to_join_group_instructions">Select contacts to join this group</string>
    <string name="zm_mm_btn_start_chat">Start a Chat</string>
    <string name="zm_mm_lbl_public_group_list_empty_hint">There are no public groups</string>
    <string name="zm_mm_title_select_contacts">Select Contacts</string>
    <string name="zm_description_mm_btn_clear_search">Clear search.</string>
    <string name="zm_description_btn_share_stop_draw">Stop annotation.</string>
    <string name="zm_msg_configure_account_indication">You need to have colleagues in your zoom account so you can add them to your company contacts. Please click Configure Account to add colleagues.</string>
</resources>