<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:zoom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.zipow.videobox.share.DrawingView
        android:id="@+id/drawingView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#00FFFFFF" />
    
    <us.zoom.androidlib.widget.ZMToolbarLayout
        android:id="@+id/drawingtools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:background="@drawable/zm_bottom_toolbar_bg"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/shareEditBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/zm_share_drawing_btn_pressed2x"
            android:contentDescription="@string/zm_description_btn_share_stop_draw" />
        
	    <com.zipow.videobox.view.ToolbarButton
	        android:id="@+id/btnSpotlight"
	        android:focusable="true"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        zoom:zm_icon="@drawable/zm_anno_spotlight"
	        zoom:zm_text="@string/zm_btn_spotlight"/>
	    
	    <com.zipow.videobox.view.ToolbarButton
	        android:id="@+id/btnPen"
	        android:focusable="true"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        zoom:zm_icon="@drawable/zm_anno_pen"
	        zoom:zm_text="@string/zm_btn_pen"/>
	    	    
	    <com.zipow.videobox.view.ToolbarButton
	        android:id="@+id/btnHighlight"
	        android:focusable="true"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        zoom:zm_icon="@drawable/zm_anno_highlight"
	        zoom:zm_text="@string/zm_btn_highlight"/>
	    
	    <com.zipow.videobox.view.ToolbarButton
	        android:id="@+id/btnErase"
	        android:focusable="true"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        zoom:zm_icon="@drawable/zm_anno_erase"
	        zoom:zm_text="@string/zm_btn_erase_all"/>
	    
	    <RelativeLayout
	        android:id="@+id/btnColorIndicator"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:paddingTop="4dp"
	        android:focusable="true" >

	        <com.zipow.videobox.share.ColorSelectedImage
	            android:id="@+id/colorImage"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_centerHorizontal="true"
	            android:src="@drawable/zm_anno_circle"
	            android:duplicateParentState="true" />

	        <TextView
	            style="@style/ZMTextView.ToolbarBtnLabel"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_below="@+id/colorImage"
	            android:layout_centerHorizontal="true"
	            android:gravity="center"
	            android:singleLine="true"
	            android:duplicateParentState="true"
	            android:text="@string/zm_btn_color" />
	    </RelativeLayout>

    </us.zoom.androidlib.widget.ZMToolbarLayout>    
</LinearLayout>