<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:zoom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <us.zoom.androidlib.widget.ZMIOSStyleTitlebarLayout
        android:id="@+id/panelTitleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ZMTitleBar"
        zoom:zm_leftButton="@+id/btnBack"
        zoom:zm_rightButton="@+id/btnInvite"
        zoom:zm_title="@+id/txtTitle" >
        
        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/zm_btn_back"
            style="@style/ZMBackButton" />
        
        <Button
            style="@style/ZMButton.TitleBar"
            android:id="@+id/btnInvite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="80dp"
            android:text="@string/zm_btn_done"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"/>

        <us.zoom.androidlib.widget.ZMDynTextSizeTextView
            android:id="@+id/txtTitle"
            style="@style/ZMTextView.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center_horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/zm_title_add_favorite" />
    </us.zoom.androidlib.widget.ZMIOSStyleTitlebarLayout>
    
    <RelativeLayout
        android:id="@+id/panelSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/edtSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignWithParentIfMissing="true"
            android:layout_toLeftOf="@+id/btnSearch"
            android:background="@drawable/zm_search_bg_normal"
            android:hint="@string/zm_hint_search"
            android:singleLine="true"
            android:imeOptions="actionSearch" />

        <Button
            android:id="@+id/btnClearSearchView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/btnSearch"
            android:layout_alignWithParentIfMissing="true"
            android:layout_centerVertical="true"
            android:background="@drawable/zm_btn_clear_search_view"
            android:contentDescription="@string/zm_description_mm_btn_clear_search" />
        
        <Button
            style="@style/ZMButton.TitleBar"
            android:id="@+id/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="3dp"
            android:text="@string/zm_btn_search" />
    </RelativeLayout>
    
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <com.zipow.videobox.view.AddFavoriteListView
            android:id="@+id/buddyListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        </com.zipow.videobox.view.AddFavoriteListView>
        
        <LinearLayout
            android:id="@+id/panelLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/zm_loading_bg"
            android:orientation="horizontal" >

            <ProgressBar
                style="@style/ZMProgressBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10dp" />

            <TextView
                style="@style/ZMTextView.Medium.OnDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/zm_msg_waiting_search_domain_user" />
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/panelConfigAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                style="@style/ZMTextView.Normal.OnLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:text="@string/zm_msg_configure_account_indication" />
            
            <Button
                android:id="@+id/btnConfigAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zm_btn_configure_account" />
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/panelFailureMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                style="@style/ZMTextView.Normal.OnLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:text="@string/zm_msg_load_domain_users_failed" />
            
        </LinearLayout>

    </FrameLayout>
    
    <us.zoom.androidlib.widget.ZMHorizontalListView
        android:id="@+id/listSelected"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#f0f0f0"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp" />
    
</LinearLayout>