<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:zoom="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/zm_window_bg" >
    
    <LinearLayout
        android:id="@+id/panelTitleBar"
        style="@style/ZMTitleBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zm_pt_titlebar_height"
        android:gravity="center" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btnBack"
                style="@style/ZMBackButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/zm_title_login" />

            <TextView
                android:id="@+id/txtTitle"
                style="@style/ZMTextView.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="center_horizontal"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/zm_title_forgetpwd" />
        </RelativeLayout>
    </LinearLayout>
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="30dp">

            <TextView
                style="@style/ZMTextView.Instructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/zm_msg_indication_forgetpwd" />
            
            <EditText
                style="@style/ZMSettingOptionEdit"
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/zm_hint_email"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:maxLength="128" />

            <Button
                style="@style/ZMButton.HappyPath"
                android:id="@+id/btnSendEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/zm_btn_send" />
        </LinearLayout>
        
    </ScrollView>
    
</LinearLayout>

