<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:zoom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <us.zoom.androidlib.widget.ZMIOSStyleTitlebarLayout
        android:id="@+id/panelTitleBar"
        style="@style/ZMTitleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        zoom:zm_leftButton="@+id/btnCancel"
        zoom:zm_rightButton="@+id/panelRight"
        zoom:zm_title="@+id/txtTitle" >

        <Button
            android:id="@+id/btnCancel"
            style="@style/ZMButton.TitleBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zm_btn_cancel" />

        <LinearLayout android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/panelRight" />

        <us.zoom.androidlib.widget.ZMDynTextSizeTextView
            android:id="@+id/txtTitle"
            style="@style/ZMTextView.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/zm_title_join_public_group" />
    </us.zoom.androidlib.widget.ZMIOSStyleTitlebarLayout>

    <RelativeLayout
        android:id="@+id/panelSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/edtSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/zm_search_bg_normal"
            android:hint="@string/zm_hint_search"
            android:imeOptions="actionSearch"
            android:singleLine="true" />

        <Button
            android:id="@+id/btnClearSearchView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/zm_btn_clear_search_view"
            android:contentDescription="@string/zm_description_mm_btn_clear_search"
            android:visibility="gone" />
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/listContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <com.zipow.videobox.view.mm.MMJoinPublicGroupListView
            android:id="@+id/groupListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:id="@+id/panelNoItemMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <TextView
                android:id="@+id/txtNoItemMsg"
                style="@style/ZMTextView.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/zm_mm_lbl_public_group_list_empty_hint" />
        </LinearLayout>
    </FrameLayout>

</LinearLayout>